fix info button title to break line and align center

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -835,13 +835,13 @@ html, body {
                   .buttonTitle {
                     display:inline-block;
                     vertical-align: middle;
-                    white-space: pre-line;
+                    white-space: pre;
                     text-transform: uppercase;
                     margin-left: 4px;
                     font-size: 13px;
                     line-height: 16px;
                     color: #6f6f6f;
-                    text-align: left;
+                    //text-align: left;
                   }
                 }
 
@@ -948,10 +948,7 @@ html, body {
                 }
               }
             }
-
-
           }
-
         }
 
         .detail {
@@ -961,6 +958,7 @@ html, body {
            height:100%;
            background-color: #6f6f6f;
           z-index:2;
+          overflow: auto;
         }
 
         img {
@@ -1291,7 +1289,7 @@ html, body {
 
 
 @media only screen
-and (min-width : 1920px) {
+and (min-width : 1700px) {
   #topBar {
     ul {
       li {
@@ -1355,6 +1353,7 @@ and (min-width : 1920px) {
       .button-unit {
         .buttonTitle {
           font-size: 25px !important;
+          line-height: 24px !important;
         }
 
         .buttonText {
@@ -1397,37 +1396,47 @@ and (min-width : 1920px) {
   }
 
   .panel {
-    .panelText {
-      .title {
-        font-size: 40px !important;
+    .contents {
+      &-video {
+        .panelText {
+          .title {
+            font-size: 40px !important;
+            height:auto;
+          }
+        }
       }
-      .seperator {
-        height: 98px !important;
-      }
-      .desc {
-        font-size: 20px !important;
-      }
-    }
 
-    .panelClose {
-      width: 56px;
+      .panelText {
+        .title {
+          font-size: 40px !important;
+          height: 128px !important;
+        }
+        .seperator {
+          height: 0px !important;
+        }
+        .desc {
+          font-size: 20px !important;
+        }
+      }
+
+      .panelImage {
+        .socialIcons {
+          height: 120px !important;
+        }
+      }
+
+      .panelClose {
+        width: 56px !important;
+      }
+
     }
   }
-
-  /*.icons {
-    width: 40px;
-    height: 36px;
-  }
-  .icons {
-    width: 50px;
-    height: 36px;
-  }*/
 }
 
 
 @media only screen
 and (min-width : 1200px)
-and (max-width : 1819px){
+and (max-width : 1699px){
   .mainView {
     .contentText {
       .title {
